<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMe"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:src="@android:color/darker_gray"/>
    <TextView
        android:text="@string/my_name"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contact me on :"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"
        android:textSize="17sp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="E-Mail" />

            <TextView
                style="@style/TextSpec.Value"
                android:text="@string/my_email"
                android:autoLink="email"
                android:textColorLink="@android:color/holo_blue_light"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/linkedln" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/linkedln"
                style="@style/TextSpec.Value"
                android:text="@string/linkedlnlink"
                android:autoLink="web"
                android:textColorLink="@android:color/holo_blue_light"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
    </TableLayout>

</LinearLayout>